@@ -24,9 +24,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
      */
     function getConfig(){
         return{
-            /* function do her work
-             * before FauncyBox shows
-             */
+            afterLoad   : $.fancybox.hideLoading,
             beforeShow  : function(){
                 DOM.Images.hideLoad();
                 KeyBinding.unSet();
@@ -65,11 +63,10 @@ var CloudCommander, Util, DOM, CloudFunc, $;
         var lDir    = cloudcmd.LIBDIRCLIENT + 'viewer/fancybox/',
             lFiles  = [ lDir + 'jquery.fancybox.css',
                         lDir + 'jquery.fancybox.js' ];
-        
-        
-        DOM.anyLoadInParallel(lFiles, function(){
+                
+        DOM.anyLoadOnLoad(lFiles, function(){
             console.timeEnd('fancybox load');
-            pCallBack();
+            Util.exec( pCallBack );
         })
         .cssSet({id:'viewer',
             inner : '#CloudViewer{'                         +
